--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "pinia": "^2.0.36",
-    "sass": "^1.63.3",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
     "vuetify": "^3.3.3"
@@ -32,6 +32,7 @@
     "jsdom": "^22.0.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "sass": "^1.63.3",
     "vite": "^4.3.5",
     "vitest": "^0.31.0"
   }
