--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "pinia": "^2.0.36",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0",
-    "vuetify": "^3.3.3"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
