--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "html-webpack-plugin": "^5.5.3",
+    "material-design-icons-iconfont": "^6.7.0",
     "prettier": "^2.8.8",
     "sass": "^1.63.4",
     "sass-loader": "^13.3.2",
@@ -35,7 +36,8 @@
     "vue-template-compiler": "^2.7.14",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-plugin-vuetify": "^2.0.1"
   },
   "dependencies": {
     "pinia": "^2.1.3",
