--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "webpack-plugin-vuetify": "^2.0.1"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
